2008-06-09  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/cogl/common/cogl-primitives.c: (cogl_path_rel_curve_to):
	fixed naming of implementation of cogl_path_rel_curve_to (it was
	called just cogl_rel_curve_to).

2008-06-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Clean up a bit the X11 and X extensions
	checks with PKG_CHECK_EXISTS(). Since we are filling up the
	X11_CFLAGS and X11_LIBS variables ourselves there is no
	point in polluting the Makefiles with unused variables.

	* clutter/Makefile.am: Remove the pkg-config variable
	evaluation and use the values retrieved from the configure
	script.

2008-06-09  Chris Lord  <chris@openedhand.com>

	Bug #914 - ClutterEntry is confused about characters vs. bytes

	* clutter/clutter-entry.c: (clutter_entry_ensure_layout),
	(clutter_entry_handle_key_event_internal),
	(clutter_entry_set_text):
	Fix mix-up of character and byte counts, handle unicode correctly.
	Use clutter_key_event_unicode() instead of
	clutter_keysym_to_unicode().

	* clutter/clutter-event.c: (clutter_key_event_unicode):
	Don't ignore ClutterKeyEvent.unicode_value

	* clutter/clutter-keysyms-table.h:
	Rename header define so as not to conflict with clutter-keysyms.h

	Patch originally by Emmanuele Bassi, with input from Tommi Komulainen.

2008-06-07  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-texture.c: made the filter-quality proeprty also
	control the use of mipmapping.
	* clutter/clutter-texture.h: added ClutterTextureQuality enum.
	* tests/test-texture-quality.c: new test.
	* tests/Makefile.am: added test-texture-quality

2008-06-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-texture.c:
	(clutter_texture_class_init): Do not unrealize on hide(), and
	do not realize() on show. By default, clutter_actor_show() will
	realize ourselves, and we don't want to unrealize when hidden
	to avoid paying the penalty of reading back the texture data
	from the video memory.
