@@ -1,3 +1,13 @@
+2008-06-09  Tommi Komulainen  <tommi.komulainen@iki.fi>
+
+	Bug #930 - add support for quartz imagebackend
+
+	* clutter/cogl/common/cogl-bitmap-pixbuf.c
+	(_cogl_bitmap_from_file): When USE_QUARTZ is defined implement
+	using Core Graphics.
+	* configure.ac: support --with-imagebackend=quartz and print
+	which imagebackend is selected. Make quartz default on OSX
+
 2008-06-09  Øyvind Kolås  <pippin@o-hand.com>
 
 	* clutter/cogl/common/cogl-primitives.c: (cogl_path_rel_curve_to):
